[tool.poetry]
name = "covid-data-challenge"
version = "0.1.0"
description = "Multi-source COVID-19 data integration and analysis"
authors = ["Lina Faller <lina.faller@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "covid_integration", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
requests = "^2.31.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"
streamlit = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
covid-integration = "covid_integration.main:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100